--- a/store_app/pubspec.yaml
+++ b/store_app/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   dio: ^5.9.0
   url_launcher: ^6.3.1
   share_plus: ^12.0.1
+  provider: ^6.1.5+1
 
 dev_dependencies:
   flutter_test:
