--- a/store_app/pubspec.yaml
+++ b/store_app/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   url_launcher: ^6.3.1
   share_plus: ^12.0.1
   provider: ^6.1.5+1
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
