--- a/store_app/pubspec.yaml
+++ b/store_app/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   share_plus: ^12.0.1
   provider: ^6.1.5+1
   image_picker: ^1.0.7
+  shared_preferences: ^2.5.4
+  flutter_riverpod: ^3.1.0
 
 dev_dependencies:
   flutter_test:
