--- a/store_app/pubspec.yaml
+++ b/store_app/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   image_picker: ^1.0.7
   shared_preferences: ^2.5.4
   flutter_riverpod: ^3.1.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
